clusters/talos-robbinsdale/apps/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "harbor.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: harbor-portal
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
